--- a/style.css
+++ b/style.css
@@ -1,493 +1,426 @@
-
-*{
-    box-sizing: border-box;
-    padding: 0;
-    margin: 0;
+* {
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
 }
-body{
-    font-family: 'Aboreto', cursive;
+body {
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 /*estilos del header -index*/
 
-header{
-    background-image: url(img/fondo2.jpg);
-    height: 400px;
-
+header {
+  background-image: url(img/fondo2.jpg);
+  height: 400px;
 }
-img{
-    width: 100%;
-    height: 100%;
-    display: block;
-
+img {
+  width: 100%;
+  height: 100%;
+  display: block;
 }
-.logo{
-    width: 80px;
-    height: auto;
-    
+.logo {
+  width: 80px;
+  height: 80px;
+  border-radius: 50%;
 }
-.logo img{
-    border-radius: 60px;
-
+.logo:hover {
+  transform: scale(1.2);
+  transition: transform 0.3s;
 }
-.logo img:hover{
-    transform: scale(1.5);
-    transition: transform .3s;
- 
+.navbar-button {
+  background-color: gray;
 }
-
-.menu{
-    display: flex;
-    justify-content: space-between;
-    padding: 20px 30px;
-    font-size: large;
-    align-items: center;   
-
+.navbar-style {
+  justify-content: end;
+  font-weight: 40px;
 }
-nav li a:hover { 
-    color: skyblue;
-    transition: color .3s;
-}
-.enlaces{
-    display: block;
-    padding: 10px 8px;
-}
-nav ul{
-    background-color: gray;
-    border-radius: 10px;
-    list-style: none;
-    display: flex;
-    gap: 50px;
-    font-weight: bold;
-
-}
- ul a{
-    text-decoration: none;
-    color: black;
-
+.nav-list {
+  background-color: rgba(255, 255, 255, 0.5);
+  padding: 0 15px;
+  border-radius: 12px;
 }
 
-.textos{
-    background-color: rgba(255, 255, 255, .5);
-    width: 500px;
-    padding: 10px 10px;
-    margin-left: 110px;
-    border-radius: 20px;
-    color: black;
-    font-size: 20px;
-    font-weight: bold;
-    
+.nav-text {
+  color: black;
+  font-size: 1.5rem;
+  font-weight: bold;
+  margin: 0 0.2em;
+}
+.nav-text:hover {
+  color: blueviolet;
+  transition: 1.2s;
+}
 
+.textos {
+  background-color: rgba(255, 255, 255, 0.5);
+  width: 500px;
+  padding: 10px 10px;
+  margin-left: 110px;
+  border-radius: 20px;
+  color: black;
+  font-size: 20px;
+  font-weight: bold;
 }
 .texto{
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  text-align: center;
+  align-items: center;
+  font-weight: bold;
+  font-size: 2em;
 }
-
 
 /*fin estilos del header-index*/
 /*Estilos del main-index*/
 
-.contenido{
-    padding-bottom: 30px;
-    
-    background-image: linear-gradient( to left, skyblue, blueviolet  );
-    
-    color: black;
-    
+.contenido {
+  padding-bottom: 30px;
+  background-image: linear-gradient(to left, skyblue, blueviolet);
+  color: black;
 }
 
-
-.texto-main{ 
-    padding-top: 20px;
-    text-align: center;
-    font-size: 30px;
-    font-weight: bold;
-    margin: auto;
-    width: 80%;
-    padding-bottom: 20px;  
-       
-    
+.texto-main {
+  padding-top: 20px;
+  text-align: center;
+  font-size: 30px;
+  font-weight: bold;
+  margin: auto;
+  width: 80%;
+  padding-bottom: 20px;
 }
-.imagenes-main{
-    border-top-left-radius: 40px;
-    border-bottom-right-radius: 40px;
-    width: 250px;
-    height: 250px;
-    box-shadow: 10px 10px 10px;
-}
-.parrafos-inicio{
-    display: flex;
-    align-items: center;
-    width: 300px;
-    font-size: 20px;
-    font-weight: bold;
-
-    
-
+.imagenes-main {
+  border-top-left-radius: 40px;
+  border-bottom-right-radius: 40px;
+  width: 250px;
+  height: 250px;
+  box-shadow: 10px 10px 10px;
 }
 
-.caso1{
-    padding-top: 50px;
-    display: flex;
-    justify-content: space-evenly;
-
+.parrafos-inicio {
+  display: flex;
+  align-items: center;
+  width: 300px;
+  font-size: 20px;
+  font-weight: bold;
 }
 
-.caso2{
-    display: flex;
-    flex-direction: row-reverse;
-    justify-content: space-evenly;
+.caso1 {
+  padding-top: 50px;
+  display: flex;
+  justify-content: space-evenly;
 }
 
-.caso3{
-    display: flex;
-    justify-content: space-evenly;
+.caso2 {
+  display: flex;
+  flex-direction: row-reverse;
+  justify-content: space-evenly;
 }
 
+.caso3 {
+  display: flex;
+  justify-content: space-evenly;
+}
 
 /* fin de estilos del main--index*/
 /*Estilos del footer-index*/
 
-.footer{
-    background-image: linear-gradient( to top, skyblue, gray );
-    display: flex;
-    justify-content: space-evenly;
-    padding-top: 25px;
-    font-size: x-large;
+.footer {
+  background-image: linear-gradient(to top, skyblue, gray);
+  display: flex;
+  justify-content: space-evenly;
+  padding-top: 25px;
+  font-size: 2em;
 }
 
-iframe{
-    width: 600px;
-    height: 150px;
+iframe {
+  width: 600px;
+  height: 150px;
 }
-ul{
-    list-style: none;
+ul {
+  list-style: none;
 }
-.lista-redes{
-    display: flex;
-    justify-content: space-around;
-    margin-top: 2em;
-}
-
-ul li a img{
-    width: 35px;
-
-
-}
-.redes  img:hover{
-    transform: scale(1.5);
-    transition: transform .5s;
+.lista-redes {
+  display: flex;
+  justify-content: space-around;
+  margin-top: 2em;
 }
 
- /*fin de estilos del footer-index*/  
+ul li a img {
+  width: 40px;
+}
+.redes img:hover {
+  transform: scale(1.5);
+  transition: transform 0.5s;
+}
 
-
-
+/*fin de estilos del footer-index*/
 
 /*estilos del main-adoptar*/
-.lista-mascotas{
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: auto;
-    gap: 50px;
-    padding-left: 30px;
-    
-}
-.lema{
-    background-image: linear-gradient(to right, orange, blue, red);
-    font-size: 35px;
-    border-radius: 5px;
-    padding: 0 10px;
+.lema {
+  background-image: linear-gradient(to right, orange, blue, red);
+  font-size: 35px;
+  border-radius: 5px;
+  padding: 0 10px;
 }
 .mascotas{
-    display: flex;
-    justify-content: space-around;
-    padding-bottom: 30px;
+  display: flex;
+  justify-content: space-evenly;
+}
+.lista-mascotas{
+  width: 100%;
+  display: flex;
+  justify-content: start;
+  gap: 20px;
+  flex-wrap: wrap;
+  padding-top: 30px ;
+  padding-left: 30px;
+
+}
+.tarjeta , .tarjeta-img{
+  width: 300px;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+}
+.tarjeta{
+  border-radius: 10px;
+  background-color: white;
+  border: 1px solid rgb(56, 55, 55);
+  box-shadow: 10px 10px 10px;
+}
+.tarjeta-img{
+  height: 225px;
+}
+.tarjeta-info{
+  padding: 15px;
+}
+.tarjeta-info-nombre{
+  text-align: center;
+  padding-bottom: 20px;
+  font-weight: bold;
+  font-size: 25px;
+  color: blue;
+}
+.tarjeta-info-descripcion{
+  text-align: center;
+  font-weight: bold;
+  font-size: 18px;
+
+}
+.tarjeta-boton{
+  display: flex;
+  justify-content: center;
+  text-decoration: none;
+  color: white;
+  font-size: 20px;
+  font-weight: bold;
+  background-color: blue;
+  padding: 15px 25px;
+  border-radius: 10px;
+  margin-top: 1em;
+}
+.tarjeta-boton:hover{
+  background-color: rgb(6, 6, 110);
+  transition: 0.5s;
+  color: white;
+}
+
+.filtro {
+  background-image: linear-gradient(to top, white, skyblue);
+  display: block;
+  border-radius: 30px;
+  width: 200px;
+  height: 400px;
+  font-size: 20px;
+  font-weight: bold;
+  box-shadow: 10px 20px 20px;
+}
+.titulo-filtro {
+  display: flex;
+  justify-content: center;
+}
+.clases {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+/*fin de estilos del main-adoptar*/
+
+/*estilos del main -donar*/
+
+.datos-donacion {
+  font-size: 30px;
+  font-weight: bold;
+  flex-flow: column;
+  display: flex;
+  justify-content: center;
+  padding: 20px;
+}
+.datos-formulario-donar {
+  background-color: transparent;
+  width: 100%;
+  font-size: 20px;
+  padding: 15px;
+  border-radius: 10px;
+  font-weight: bold;
+}
+.formulario-donar{
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: auto;
+  gap: 20px;
+  font-size: 30px;
+  font-weight: bold;
+  padding: 20px;
 }
 
 
-.nombre{
-    display: flex;
-    justify-content: center;
-    padding-top: 20px;
+.boton-main {
+  display: flex;
+  justify-content: center;
+  padding-top: 20px;
 }
 
-.filtro{
-    background-image: linear-gradient(to top, white, skyblue);
-    display: block;
-    border-radius: 30px;
-    width: 200px;
-    height: 400px;
-    font-size: 25px;
-    font-weight: bold;
-    box-shadow: 10px 20px 20px;
-    
- }
- .titulo-filtro{
-    display: flex;
-    justify-content: center;
- }
- .clases{
-    display: flex;
-    justify-content: center;
-    align-items: center;
- }
-
-
-
-
-
- /*fin de estilos del main-adoptar*/
-
- /*estilos del main -donar*/
-
-  
-.datos-donacion{
-    font-size: 30px;
-    font-weight: bold;
-    display: flex;
-    justify-content: center;
-    padding-top: 40px;
-    padding-bottom: 40px;
-
-    
+.boton {
+  font-size: 20px;
+  font-weight: bold;
+  padding: 5px 10px;
+  background-color: black;
+  color: skyblue;
+  border-radius: 5px;
 }
-.datos-formulario-donar{
-    background-color: transparent;
-    width: 100%;
-    font-size: 20px;
-    padding: 15px;
-    border-radius: 10px;
-    font-weight: bold;
-}
-
-.boton-main{
-    display: flex;
-    justify-content: center;
-    padding-top: 20px;
-
-}
-
-.boton{
-    font-size: 20px;
-    font-weight: bold;
-    padding: 5px 10px;
-    background-color: black;
-    color: skyblue;
-    border-radius: 5px;
-    
-
-}
-
-
 
 /*fin de estilos del main-donar*/
 
-/*estilos del main-mascotas perdidas*/
-.lista-mascotas-perdidas{
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    grid-template-rows: auto;
-    gap: 40px;
-}
+/*estilos del main-mascotas perdidaa*/
 
+.lista-mascotas-perdidas {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  gap: 30px;
+  padding: 30px 0;
+ 
+}
 
 /*fin estilos de main-mascotas perdidas*/
 
 /*inicio estilos de main-contacto*/
 
-
-.datos-contacto{
-    margin: auto;
-    background-color: transparent;
-    width: 600px;
-    padding: 30px;
-    border-radius: 10px;
-    box-shadow: 10px 10px 20px black;
-    
-
+.datos-contacto {
+  margin: auto;
+  background-color: transparent;
+  width: 700px;
+  padding: 30px;
+  border-radius: 10px;
+  box-shadow: 10px 10px 20px black;
 }
-.datos{
-    background-color: black;
-    border-radius: 10px;
-    width: 100%;
-    margin-top: 15px;
-    padding: 10px;
-    font-size: 25px;
+.datos {
+  background-image: linear-gradient(to right, blueviolet, rgb(56, 56, 56));
+  border-radius: 10px;
+  width: 100%;
+  margin-top: 15px;
+  padding: 10px;
+  font-size: 25px;
 }
 
-.datos::placeholder{
-    font-family: cursive;
+.datos::placeholder {
+  font-family: cursive;
 }
-
-
 
 /*fin de estilos-contacto*/
 /* VERSION MOBILE-INDEX-*/
-@media only screen and (max-width:575.98px){
-    header{
-        background-image: url(img/fondo-mobile.jpg);
-        width: 100%;
-        height: auto;
-       
-    
-    }
-    img{
-        width: 100%;
-        height: 100%;
-    
-    }
-    .logo{
-        margin: auto;
-        width: 60px;
-        
-    }
-    .logo img{
-        border-radius: 60px;
-    
-    }
-    .logo img:hover{
-        transform: scale(1.5);
-        transition: transform .3s;
-     
-    }
-    
-    .menu{
-        display: block;
-        font-size: large;
-        align-items: center; 
-         
-    }
-    nav li a:hover { 
-        color: skyblue;
-        transition: color .3s;
-    }
-    a{
-        display: block;
-        padding: 10px 8px;
-    }
-    nav ul{
-        background-color: transparent;
-        padding-bottom: 2px;
-        flex-direction: column;
-        list-style: none;
-        gap: 10px;
-        font-weight: bold;    
-    }
-    .menu ul a{
-        text-decoration: none;
-        color: rgb(218, 148, 18);
-        border: 3px solid black;
-        border-radius: 4em;
-        width: 100%;
-        display: flex;
-        justify-content: center;
+@media only screen and (max-width: 576px) {
+  header {
+    background-image: url(img/fondo-mobile.jpg);
+    width: 100%;
+    height: auto;
+  }
 
+  .logo {
+    margin: auto;
+    width: 60px;
+    height: 60px;
+  }
+ 
+  .textos {
+    background-color: rgba(255, 255, 255, 0.5);
+    width: 100%;
+    padding: 10px 10px;
+    margin-left: 0px;
+    border-radius: 15px;
+    color: black;
+    font-size: 20px;
+    font-weight: bold;
+  }
+  .texto {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
 
-        
-        
+  .texto-main {
+    text-align: center;
+    padding: 20px;
+    font-size: 15px;
+    font-weight: bold;
+    width: 100%;
+  }
+  /*MAIN-MOBILE*/
+  
 
-    }
-    
-    .textos{
-        background-color: rgba(255, 255, 255, .5);
-        width: 100%;
-        padding: 10px 10px;
-        margin-left: 0px;
-        border-radius: 15px;
-        color:  black;
-        font-size: 20px;
-        font-weight: bold;
-       
-    
-      
-        
-    
-    }
-    .texto{
-        display: flex;
-        justify-content: center;
-        align-items: center;
-    
-    }
+  .imagenes-main {
+    border-top-left-radius: 40px;
+    border-bottom-right-radius: 40px;
+    width: 100%;
+    height: 300px;
+    box-shadow: 10px 10px 10px;
+  }
+  .parrafos-inicio {
+    width: 100%;
+    margin: auto;
+    font-size: 15px;
+    font-weight: bold;
+    padding: 20px 0;
+  }
 
-    .texto-main{ 
-        
-        text-align: center;
-        font-size: 15px;
-        font-weight: bold;
-        width: 100%;
-      
-           
-        
-    }
-    /*MAIN-MOBILE*/
-    .contenido{
-        background-color: gray;
-        color: black;
-        flex-direction: column;
-        
-    }
-    
-    .imagenes-main{
-        border-top-left-radius: 40px;
-        border-bottom-right-radius: 40px;
-        width: 100%;
-        height: 300px;
-        box-shadow: 10px 10px 10px;
-    }
-    .parrafos-inicio{
-        width: 100%;
-        margin: auto;
-        font-size: 15px;
-        font-weight: bold;
-        padding: 20px 0;  
-    }
-    
-    .caso1{
-        padding: 10px 50px;
-        display: block;
-    
-    }
-    
-    .caso2{
-        padding: 10px 50px;
-        display: block;
-        
-    }
-    
-    .caso3{
-        padding: 10px 50px;
-        display: block;
-       
-    }
-    /*footer-mobile*/
-    .footer{
-        background-color: skyblue;
-        display: block;
-        justify-content: flex-end;
-        padding-top: 15px;
-        font-size: large;
-    }
-    .texto-footer{
-        display: flex;
-        justify-content: center;
+  .caso1 , .caso2 , .caso3{
+    padding: 10px 50px;
+    display: block;
+  }
 
-    }
-    iframe{
-        padding: 1em;
-        width: 100%;
-        height: auto;
-    }
-    ul{
-        display: flex;
-        justify-content: space-evenly;
-        list-style: none;
-    }
-    ul li a img{
-        width: 50px;
-    }
-
+  /*footer-mobile*/
+  .footer {
+    background-color: skyblue;
+    display: block;
+    justify-content: flex-end;
+    padding: 15px 0;
+    font-size: large;
+  }
+  .texto-footer {
+    display: flex;
+    justify-content: center;
+  }
+  iframe {
+    padding: 1em;
+    width: 100%;
+    height: auto;
+  }
+  ul {
+    display: flex;
+    justify-content: space-evenly;
+    list-style: none;
+  }
+  ul li a img {
+    width: 50px;
+  }
+  /*donar mobile*/
+  .formulario-donar{
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: auto;
+    gap: 20px;
+    font-size: 30px;
+    font-weight: bold;
+    padding: 20px;
+  }
 }
