--- a/bootstrap.css
+++ b/bootstrap.css
@@ -11,7 +11,6 @@
   padding: 0 15px;
   border-radius: 12px;
 }
-
 .nav-link{
   color: black;
   font-size: 1.5rem;
@@ -20,5 +19,6 @@
 }
 .nav-link:hover {
   color: blueviolet;
-  transition: 1.2s;
+  transition: 1s;
+  text-decoration: underline;
 }
