--- a/style.css
+++ b/style.css
@@ -54,19 +54,19 @@ img {
 /*Estilos del main-index*/
 
 .main{
-  padding-bottom: 30px;
   background-image: linear-gradient(to left, skyblue, blueviolet);
   color: black;
+  padding-bottom: 25px;
 }
 
 .main__title , .main__text{
-  padding-top: 20px;
   text-align: center;
   font-size: 30px;
   font-weight: bold;
   margin: auto;
   width: 80%;
-  padding-bottom: 30px;
+  padding: 20px 0;
+
 }
 
 .experience-card{
@@ -220,6 +220,13 @@ img {
   justify-content: center;
   align-items: center;
 }
+.filter-form__text{
+  color: blue;
+}
+.filter__title{
+  color: blueviolet;
+  font-weight: bolder;
+}
 
 /*fin de estilos del main-adoptar*/
 
@@ -327,11 +334,12 @@ img {
 
 
   /*MAIN-MOBILE*/
- 
   .main__title{
-    padding: 20px;
-    font-size: 15px;
+    font-size: 20px;
     width: 100%;
+  }
+  .main__text{
+    font-size: 20px;
   }
   .experience-card{
     padding: 10px 50px;
@@ -375,4 +383,44 @@ img {
     grid-column-start: 1;
     grid-column-end: 1;
   }
+
+  /*adoptar mobile*/
+  .lema {
+    font-size: 20px;
+    border-radius: 0px;
+    
+  }
+  .pets-cards{
+    width: 100%;
+    flex-direction: column-reverse;
+    display: flex;
+    justify-content: center;
+    padding-left: 0px;
+  }
+  .pets-cards__adoption{
+    display: flex;
+    justify-content: center;
+    padding-left: 0px;
+    padding: 40px;
+  
+  }
+  .pet-card , .pet-card__img{
+    width: 100%;
+  }
+
+  
+  .filter{
+    width: 100%;
+    height: 100%;
+    font-size: 15px;
+    border-radius: 10px;
+    margin: 0;
+
+  }
+  .filter-form{
+    display: flex;
+    justify-content: space-between;
+    gap: 30px;
+}
+  
 }
