--- a/scss/base/_variables.scss
+++ b/scss/base/_variables.scss
@@ -1,6 +1,9 @@
-$bg-color__introduction: rgba(255, 255, 255, 0.5);
+$bg-color__introduction: rgba(255, 255, 255, 0.9);
 $bg-color__card-btn: blue;
 $bg-color__btn: black;
+//Colores primarios
+$color-primary: rgba(248,196,95,255);
+$color-secundary: gray;
 
 
 
