--- a/css/style.css
+++ b/css/style.css
@@ -18,8 +18,11 @@ p {
 
 /*Header*/
 .banner {
-  background-image: url(../img/fondo2.jpg);
-  height: 400px;
+  background-image: url(../img/fondo16.jpg);
+  height: 470px;
+  /*.container-fluid{
+    background-color: black;
+  }*/
 }
 .banner .logo {
   width: 80px;
@@ -38,20 +41,20 @@ p {
   font-weight: 40px;
 }
 .banner .navbar-nav {
-  background-color: rgba(255, 255, 255, 0.5);
+  background-color: black;
   padding: 0 15px;
   border-radius: 12px;
 }
 .banner .nav-link {
-  color: black;
+  color: gray;
   font-size: 1.5rem;
-  font-weight: bold;
+  font-weight: 700;
   margin: 0 0.2em;
 }
 .banner .nav-link:hover {
-  color: blueviolet;
-  transition: 1s;
-  text-decoration: underline;
+  background-color: #dd9e40;
+  transition: 0.8s;
+  color: black;
 }
 .banner .introduction,
 .banner h1,
@@ -61,16 +64,17 @@ p {
   line-height: 1.3;
 }
 .banner .introduction {
-  background-color: rgba(255, 255, 255, 0.5);
+  background-color: rgba(255, 255, 255, 0.9);
   width: 500px;
   padding: 10px 10px;
   margin-left: 110px;
   border-radius: 20px;
-  color: black;
+  color: colores;
   font-size: 20px;
-  font-weight: bold;
+  font-weight: 800;
 }
 .banner .introduction__title {
+  color: #dd9e40;
   text-align: center;
   font-weight: bold;
   font-size: 2em;
@@ -78,7 +82,7 @@ p {
 
 /*Footer*/
 .footer {
-  background-image: linear-gradient(to top, skyblue, gray);
+  background-color: #aaac94;
   display: flex;
   justify-content: space-evenly;
   padding-top: 25px;
@@ -119,15 +123,20 @@ p {
 }
 
 /*Main-index*/
+.root {
+  background-color: black;
+}
+
 .main {
-  background-image: linear-gradient(to left, skyblue, blueviolet);
+  background-color: gray;
   color: black;
   padding-bottom: 25px;
+  margin: 0 30px;
 }
 .main__title, .main__text {
   text-align: center;
   font-size: 30px;
-  font-weight: bold;
+  font-weight: 700;
   margin: auto;
   width: 80%;
   padding: 20px 0;
@@ -145,14 +154,24 @@ p {
   border-bottom-right-radius: 20px;
   width: 250px;
   height: 250px;
-  box-shadow: 10px 10px 20px;
+  box-shadow: 10px 10px 20px rgb(248, 196, 95);
+}
+.main .experience-card__flecha {
+  width: 200px;
+  height: 200px;
+}
+.main .experience-card__flecha--reverse {
+  width: 200px;
+  height: 200px;
+  transform: rotate(180deg);
 }
 .main .experience-card__text {
   display: flex;
   align-items: center;
   width: 300px;
   font-size: 24px;
-  font-weight: bold;
+  font-weight: 800;
+  color: rgb(248, 196, 95);
 }
 
 /*Main-adoptar*/
@@ -160,6 +179,7 @@ p {
   display: flex;
   justify-content: space-evenly;
   padding-top: 30px;
+  color: black;
 }
 
 .lema {
@@ -180,9 +200,9 @@ p {
 
 .pet-card {
   border-radius: 10px;
-  background-color: white;
+  background-color: gray;
   border: 1px solid rgb(56, 55, 55);
-  box-shadow: 10px 10px 20px;
+  box-shadow: 10px 10px 20px rgb(248, 196, 95);
 }
 .pet-card, .pet-card__img {
   width: 300px;
@@ -200,40 +220,42 @@ p {
   padding-bottom: 20px;
   font-weight: bold;
   font-size: 24px;
-  color: blue;
+  color: rgb(248, 196, 95);
 }
 .pet-card .card-information__description {
   text-align: center;
-  font-weight: bold;
+  font-weight: 800;
   font-size: 18px;
 }
 .pet-card .pet-card__button {
   display: flex;
   justify-content: center;
   text-decoration: none;
-  color: white;
+  color: rgb(248, 196, 95);
   font-size: blue;
   font-weight: bold;
-  background-color: blue;
+  background-color: gray;
   padding: 15px 25px;
+  border: 2px solid black;
   border-radius: 10px;
   margin-top: 1em;
 }
 .pet-card .pet-card__button:hover {
-  background-color: rgb(6, 6, 110);
+  background-color: #dd9e40;
   transition: 0.5s;
   color: white;
 }
 
 .filter {
-  background-image: linear-gradient(to top, white, skyblue);
+  position: sticky;
+  top: 50px;
   display: block;
   border-radius: 20px;
   width: 200px;
   height: 400px;
   font-size: 24px;
   font-weight: bold;
-  box-shadow: 10px 20px 20px;
+  box-shadow: 10px 20px 20px rgb(248, 196, 95);
   margin-right: 60px;
 }
 .filter__title {
@@ -367,6 +389,7 @@ p {
   }
   .main__text {
     padding: 25px;
+    font-weight: 700;
   }
   .main .experience-card {
     padding: 10px 50px;
@@ -374,6 +397,12 @@ p {
   }
   .main .experience-card__img {
     width: 100%;
+  }
+  .main .experience-card__flecha {
+    display: none;
+  }
+  .main .experience-card__flecha--reverse {
+    display: none;
   }
   .main .experience-card__text {
     width: 100%;
