--- a/scss/base/_variables.scss
+++ b/scss/base/_variables.scss
@@ -1,9 +1,16 @@
-$bg-color__introduction: rgba(255, 255, 255, 0.9);
-$bg-color__card-btn: blue;
-$bg-color__btn: black;
-//Colores primarios
-$color-primary: rgba(248,196,95,255);
-$color-secundary: gray;
+$bg-nav-inputs: #CEAB93;
+$bg: #FFFBE9;
+$bg-btn: #AD8B73;
+//Colore primario
+$color-primary: #E3CAA5;
+//color del texto
+$color-text: #3E2723;
+//color de bordes
+$color-bordes: #AD8B73;
+//fon size
+$font-texto: 18px;
+$font-titulos: 25px;
+$font-subtitulos: 20px;
 
 
 
