--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@
   box-sizing: border-box;
   padding: 0;
   margin: 0;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: "Cairo", sans-serif;
 }
 
 img {
@@ -18,334 +18,563 @@ p {
 
 /*Header*/
 .banner {
-  background-image: url(../img/fondo16.jpg);
-  height: 470px;
-  /*.container-fluid{
-    background-color: black;
-  }*/
+  background-image: url(../img/fondo3.png);
+  height: 600px;
 }
-.banner .logo {
-  width: 80px;
-  height: 80px;
-  border-radius: 50%;
+
+.logo {
+  width: 50px;
+  height: 50px;
+  border-radius: 10px;
 }
-.banner .logo:hover {
+.logo:hover {
   transform: scale(1.2);
   transition: transform 0.3s;
 }
-.banner .navbar-toggler {
-  background-color: gray;
+
+.container-fluid {
+  background-color: #CEAB93;
+  margin: 0px 55px;
+  border-radius: 25px;
+  padding: 3px 0;
+  padding: 0 30px;
 }
-.banner .navbar-collapse {
+
+.navbar-toggler {
+  background-color: #E3CAA5;
+}
+
+.navbar-collapse {
   justify-content: end;
   font-weight: 40px;
 }
-.banner .navbar-nav {
-  background-color: black;
-  padding: 0 15px;
-  border-radius: 12px;
+
+.nav-item {
+  padding: 5px 0;
 }
-.banner .nav-link {
-  color: gray;
+
+.nav-item.active {
+  text-decoration: line-through;
+}
+
+.nav-link {
+  color: white;
   font-size: 1.5rem;
   font-weight: 700;
   margin: 0 0.2em;
 }
-.banner .nav-link:hover {
-  background-color: #dd9e40;
+.nav-link:hover {
+  background-color: #AD8B78;
   transition: 0.8s;
-  color: black;
 }
-.banner .introduction,
-.banner h1,
-.banner p {
-  padding: 10px;
-  margin: 0;
-  line-height: 1.3;
+
+.container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
-.banner .introduction {
-  background-color: rgba(255, 255, 255, 0.9);
-  width: 500px;
+.container .introduction {
+  width: 400px;
+  border: 3px solid #AD8B73;
+  margin-top: 60px;
   padding: 10px 10px;
-  margin-left: 110px;
-  border-radius: 20px;
-  color: colores;
-  font-size: 20px;
-  font-weight: 800;
-}
-.banner .introduction__title {
-  color: #dd9e40;
-  text-align: center;
+  border-radius: 10px;
+  font-size: 18px;
   font-weight: bold;
-  font-size: 2em;
+  color: #3E2723;
+}
+.container .introduction__title {
+  color: #3E2723;
+  text-align: center;
+  font-weight: 800;
+  font-size: 25px;
+}
+.container .networks__list {
+  display: flex;
+  gap: 20px;
+  flex-direction: column;
+  list-style: none;
+  padding-top: 60px;
+}
+.container .networks .network img {
+  width: 40px;
 }
 
 /*Footer*/
 .footer {
-  background-color: #aaac94;
-  display: flex;
-  justify-content: space-evenly;
-  padding-top: 25px;
-  font-size: 2em;
+  width: 90%;
+  margin: auto;
+  margin-bottom: 30px;
 }
-.footer .logo {
-  width: 80px;
-  height: 80px;
-  border-radius: 50%;
+.footer__title {
+  text-align: center;
+  color: #3E2723;
+  font-size: 25px;
+  padding-bottom: 30px;
+  font-weight: 700;
 }
-.footer .logo:hover {
-  transform: scale(1.2);
-  transition: transform 0.3s;
-}
-.footer .footer-text {
-  display: flex;
-  justify-content: center;
-}
-.footer .footer__location iframe {
-  width: 600px;
-  height: 150px;
-}
-.footer .footer-networks ul {
-  list-style: none;
-}
-.footer .footer-networks__list {
+.footer__banner {
+  background-color: #E3CAA5;
   display: flex;
   justify-content: space-around;
-  margin-top: 1.9em;
-  padding-left: 0;
+  align-items: center;
+  margin: auto;
+  border-radius: 10px;
 }
-.footer .footer-networks__list .network img {
+.footer__location {
+  margin: 20px;
+}
+.footer__location iframe {
+  height: 200px;
+  border-radius: 10px;
+}
+.footer__networks {
+  padding-right: 60px;
+}
+.footer__networks-list {
+  margin: auto;
+  list-style: none;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  gap: 20px;
+}
+.footer .network img {
   width: 40px;
-}
-.footer .footer-networks__list .network img:hover {
-  transform: scale(1.5);
-  transition: transform 0.5s;
 }
 
 /*Main-index*/
 .root {
-  background-color: black;
+  background-color: #FFFBE9;
 }
 
-.main {
-  background-color: gray;
-  color: black;
+.main-index {
+  color: #3E2723;
   padding-bottom: 25px;
-  margin: 0 30px;
+  border-top: 2px solid #AD8B73;
+  border-bottom: 2px solid #AD8B73;
+  width: 90%;
+  margin: 40px auto;
 }
-.main__title, .main__text {
+.main-index__carousel {
+  background-color: #E3CAA5;
+  margin-top: 20px;
+  padding: 20px 20px;
+  border-radius: 10px;
+  border: 2px solid #AD8B73;
+}
+.main-index .carousel-title {
   text-align: center;
-  font-size: 30px;
+  padding: 30px 0;
+  font-size: 20px;
   font-weight: 700;
-  margin: auto;
-  width: 80%;
-  padding: 20px 0;
+  text-transform: uppercase;
 }
-.main .experience-card {
+.main-index .carousel-indicators button {
+  background-color: #3E2723;
+}
+.main-index .carousel-control-prev-icon {
+  background-image: url(../img/prev.svg);
+  width: 50px;
+  height: 50px;
+}
+.main-index .carousel-control-next-icon {
+  background-image: url(../img/next.svg);
+  width: 50px;
+  height: 50px;
+}
+.main-index__title, .main-index__text {
+  text-align: center;
+  font-size: 20px;
+  font-weight: 700;
+  padding: 40px 0;
+  margin-top: 20px;
+  text-transform: uppercase;
+}
+.main-index .experiences {
   display: flex;
   justify-content: space-evenly;
-  padding: 30px 0;
+  flex-wrap: wrap;
+  gap: 50px;
+  margin-bottom: 20px;
 }
-.main .experience-card--reverse {
-  flex-direction: row-reverse;
-}
-.main .experience-card__img {
-  border-top-left-radius: 20px;
-  border-bottom-right-radius: 20px;
-  width: 250px;
-  height: 250px;
-  box-shadow: 10px 10px 20px rgb(248, 196, 95);
-}
-.main .experience-card__flecha {
-  width: 200px;
-  height: 200px;
-}
-.main .experience-card__flecha--reverse {
-  width: 200px;
-  height: 200px;
-  transform: rotate(180deg);
-}
-.main .experience-card__text {
+.main-index .experiences .experience-card {
   display: flex;
+  justify-content: space-evenly;
   align-items: center;
+  gap: 30px;
+  padding: 30px 20px;
+  width: 560px;
+  height: auto;
+  border: 2px solid #AD8B73;
+  background-color: #E3CAA5;
+  margin-bottom: 20px;
+  border-radius: 10px;
+}
+.main-index .experiences .experience-card__img {
+  width: 200px;
+  height: 200px;
+  border-radius: 50%;
+}
+.main-index .experiences .experience-card__title {
+  font-size: 25px;
+  font-weight: 700;
+  padding-bottom: 20px;
+}
+.main-index .experiences .experience-card__text {
   width: 300px;
-  font-size: 24px;
-  font-weight: 800;
-  color: rgb(248, 196, 95);
+  font-size: 18px;
+  font-weight: 400;
+  color: #3E2723;
 }
 
 /*Main-adoptar*/
-.main__adoption {
+.main-adoption {
+  width: 90%;
+  margin: auto;
+  color: #3E2723;
+}
+.main-adoption__text {
+  text-align: center;
+  padding: 40px 0;
+  font-size: 20px;
+  font-weight: 700;
+  text-transform: uppercase;
+  color: #3E2723;
+}
+
+.pets-cards {
   display: flex;
-  justify-content: space-evenly;
-  padding-top: 30px;
-  color: black;
+  justify-content: space-around;
+  gap: 10px;
+  padding-bottom: 30px;
 }
-
-.lema {
-  background-image: linear-gradient(to right, orange, blue, red);
-  font-size: 35px;
-  border-radius: 5px;
-  padding: 0 10px;
-}
-
 .pets-cards__adoption {
   width: 100%;
   display: flex;
-  justify-content: start;
+  justify-content: space-between;
   gap: 20px;
+  align-items: center;
   flex-wrap: wrap;
-  padding-left: 30px;
 }
 
 .pet-card {
-  border-radius: 10px;
-  background-color: gray;
-  border: 1px solid rgb(56, 55, 55);
-  box-shadow: 10px 10px 20px rgb(248, 196, 95);
-}
-.pet-card, .pet-card__img {
   width: 300px;
-  border-top-left-radius: 10px;
-  border-top-right-radius: 10px;
+  background-color: #E3CAA5;
+  border-radius: 10px;
+  border: 2px solid #AD8B73;
+  padding: 30px;
 }
 .pet-card__img {
-  height: 225px;
+  width: 100%;
+  height: 200px;
+  border-radius: 10px;
 }
-.pet-card .card-information {
-  padding: 15px;
-}
-.pet-card .card-information__name {
-  text-align: center;
-  padding-bottom: 20px;
-  font-weight: bold;
-  font-size: 24px;
-  color: rgb(248, 196, 95);
-}
-.pet-card .card-information__description {
-  text-align: center;
-  font-weight: 800;
-  font-size: 18px;
-}
-.pet-card .pet-card__button {
+.pet-card__button {
+  text-decoration: none;
   display: flex;
   justify-content: center;
-  text-decoration: none;
-  color: rgb(248, 196, 95);
-  font-size: blue;
-  font-weight: bold;
-  background-color: gray;
-  padding: 15px 25px;
-  border: 2px solid black;
+  margin-top: 30px;
+  background-color: #AD8B73;
+  padding: 20px 0;
   border-radius: 10px;
-  margin-top: 1em;
-}
-.pet-card .pet-card__button:hover {
-  background-color: #dd9e40;
-  transition: 0.5s;
   color: white;
+  font-weight: 700;
+}
+.pet-card__button:hover {
+  background-color: transparent;
+  box-shadow: 0 0 10px 0 #3e2723 inset, 0 0 10px 4px #3e2723;
+  color: #3E2723;
+  transition: 0.8s;
+  transform: scale 1.3;
+}
+
+.card-information {
+  height: 100%;
+  margin: 20px 0;
+  border-top: 2px solid #AD8B73;
+}
+.card-information__name {
+  padding: 20px 0;
+  width: 100%;
+  text-align: center;
+  font-size: 25px;
+  font-weight: 700;
+}
+.card-information__description {
+  text-align: center;
+  font-weight: 600;
+  padding-bottom: 30px;
+  border-bottom: 2px solid #AD8B73;
 }
 
 .filter {
-  position: sticky;
-  top: 50px;
   display: block;
-  border-radius: 20px;
-  width: 200px;
-  height: 400px;
-  font-size: 24px;
-  font-weight: bold;
-  box-shadow: 10px 20px 20px rgb(248, 196, 95);
-  margin-right: 60px;
+  position: sticky;
+  width: 250px;
+  height: auto;
+  top: 0px;
 }
 .filter__title {
-  display: flex;
-  justify-content: center;
-  color: blueviolet;
-  font-weight: bolder;
+  text-align: center;
+  font-weight: 700;
+  font-size: 25px;
 }
 .filter__data {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  padding-bottom: 8px;
+  background-color: #E3CAA5;
+  border-radius: 10px;
+  font-size: 18px;
+  color: #3E2723;
 }
-
-.filter-form__text {
-  color: blue;
+.filter .filter-form {
+  padding: 30px 20px;
+}
+.filter .filter-form__text {
+  padding-bottom: 10px;
+  margin-bottom: 10px;
+  border-bottom: 2px solid #AD8B73;
+  font-weight: 700;
+}
+.filter .filter-form__items {
+  padding-left: 20px;
+}
+.filter .filter-form__item {
+  padding-bottom: 5px;
+}
+.filter__button {
+  background-color: #AD8B73;
+  width: 100%;
+  padding: 10px 0;
+  border-radius: 10px;
+  border: none;
+  margin-top: 10px;
+  color: white;
+}
+.filter__button:hover {
+  background-color: transparent;
+  box-shadow: 0 0 10px 0 #3E2723 inset, 0 0 10px 4px #3E2723;
+  color: #3E2723;
+  transition: 0.8s;
+  transform: scale 1.3;
 }
 
 /*main-donar*/
-.donate-form__data {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  grid-template-rows: auto;
-  gap: 20px;
-  font-size: 30px;
-  font-weight: bold;
-  padding: 20px;
+.main-donar {
+  width: 90%;
+  margin: auto;
+  color: #3E2723;
+  padding-bottom: 20px;
 }
-.donate-form__data__item {
-  padding: 0 150px;
-  grid-column-start: 1;
-  grid-column-end: 3;
-}
-
-.input-donation {
-  background-color: transparent;
-  width: 100%;
+.main-donar__title {
+  text-align: center;
+  padding: 40px 0;
   font-size: 20px;
-  padding: 15px;
-  border-radius: 10px;
-  font-weight: bold;
+  font-weight: 700;
+  text-transform: uppercase;
+  color: #3E2723;
 }
-
-.button {
+.main-donar__description {
+  border: 2px solid #AD8B73;
   display: flex;
   justify-content: center;
-  padding-top: 20px;
+  gap: 20px;
+  align-items: center;
+  padding: 20px 30px;
+  border-radius: 10px;
+  margin-bottom: 70px;
 }
-.button__text {
-  font-size: 20px;
-  font-weight: bold;
-  padding: 5px 10px;
+.main-donar__description img {
+  width: 100px;
+  height: 100px;
+  border-radius: 10px;
+}
+.main-donar__text {
+  font-size: 18px;
+  font-weight: 500;
+  line-height: 1.5;
+}
+
+.donate-form {
+  background-color: #E3CAA5;
+  border-radius: 10px;
+  width: 700px;
+  margin: auto;
+  padding: 20px 30px;
+}
+.donate-form__card {
+  margin: auto;
+  padding: 30px 0;
+}
+.donate-form__img {
+  margin: auto;
+  width: 300px;
+  height: 150px;
+}
+
+.form-donar {
+  border-top: 2px solid #AD8B73;
+  color: #3E2723;
+  font-size: 18px;
+  padding: 30px 0;
+}
+.form-donar__datas input {
+  background-color: #CEAB93;
+  width: 100%;
+  height: 40px;
+  margin: 20px 0;
+  border-radius: 10px;
+  border: none;
+  padding: 0 5px;
+}
+.form-donar__items {
+  display: flex;
+  justify-content: space-between;
+}
+.form-donar__items select {
+  background-color: #CEAB93;
+  padding: 10px 40px;
+  margin-top: 20px;
+  margin-right: 10px;
+  border-radius: 10px;
+  border: none;
+}
+.form-donar__button {
+  display: block;
+  margin: auto;
+  padding: 10px 100px;
+  background-color: #AD8B73;
+  border-radius: 10px;
+  border: none;
+  color: #3E2723;
+  font-size: 18px;
+  font-weight: 700;
+  color: white;
+}
+.form-donar__button:hover {
   background-color: transparent;
-  color: black;
-  border-radius: 5px;
-}
-.button__text:hover {
-  background-color: black;
-  color: skyblue;
-  transition: 0.5s;
+  box-shadow: 0 0 10px 0 #3e2723 inset, 0 0 10px 4px #3e2723;
+  color: #3E2723;
+  transition: 0.8s;
+  transform: scale 1.3;
 }
 
 /*Main - mascotas perdidas*/
+.main-mascotasPerdidas {
+  color: #3E2723;
+}
+.main-mascotasPerdidas__text {
+  text-align: center;
+  padding: 40px 0;
+  font-size: 20px;
+  font-weight: 700;
+  text-transform: uppercase;
+  color: #3E2723;
+}
+
 .lost-pets-cards {
-  width: 100%;
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
-  gap: 25px;
-  padding: 30px 0;
+  gap: 5px;
 }
 
 /* main - contacto*/
-.contact-form {
+.main-contacto {
+  width: 90%;
   margin: auto;
-  background-color: transparent;
-  width: 700px;
-  padding: 30px;
-  border-radius: 10px;
-  box-shadow: 10px 10px 20px black;
+  color: #3E2723;
 }
-
-.input-contact {
-  background-image: linear-gradient(to right, blueviolet, rgb(56, 56, 56));
+.main-contacto__title {
+  text-align: center;
+  font-size: 25px;
+  font-weight: 700;
+  color: #3E2723;
+  text-transform: uppercase;
+  padding: 30px 0;
+}
+.main-contacto__text {
+  font-size: 18px;
+  font-weight: 500;
+}
+.main-contacto__container {
+  display: flex;
+  justify-content: space-evenly;
+  border: 2px solid #AD8B73;
+  padding: 20px 0;
   border-radius: 10px;
+  align-items: center;
+}
+.main-contacto__container img {
+  width: 100px;
+  height: 100px;
+}
+.main-contacto__container__text {
+  font-size: 18px;
+  color: #3E2723;
+  font-weight: 600;
+}
+.main-contacto .contact-form {
+  background-color: #E3CAA5;
+  width: 700px;
+  margin: 50px auto;
+  border-radius: 10px;
+  padding-bottom: 20px;
+  color: #3E2723;
+  font-size: 18px;
+}
+.main-contacto .contact-form__data {
+  display: grid;
+  gap: 20px;
+  padding: 30px;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: auto;
+}
+.main-contacto .contact-form__data input {
   width: 100%;
-  margin-top: 15px;
-  padding: 10px;
-  font-size: 24px;
+  height: 40px;
+  background-color: #CEAB93;
+  border-radius: 10px;
+  border: none;
+  padding: 0 5px;
+}
+.main-contacto .contact-form__data input[type=email]:invalid {
+  border: 2px solid red;
+}
+.main-contacto .contact-form__data textarea {
+  border: none;
+  resize: none;
+  width: 100%;
+  height: 150px;
+  background-color: #CEAB93;
+  border-radius: 10px;
+  padding-left: 5px;
+}
+.main-contacto .contact-form__data label {
+  padding-bottom: 15px;
+  padding-left: 5px;
+}
+.main-contacto .contact-form--item {
+  grid-column-start: 1;
+  grid-column-end: 3;
+}
+.main-contacto .contact-form__button {
+  display: block;
+  margin: auto;
+  padding: 10px 100px;
+  background-color: #AD8B73;
+  border-radius: 10px;
+  border: none;
+  color: #3E2723;
+  font-size: 18px;
+  font-weight: 700;
+  color: white;
+}
+.main-contacto .contact-form__button:hover {
+  background-color: transparent;
+  box-shadow: 0 0 10px 0 #3E2723 inset, 0 0 10px 4px #3E2723;
+  color: #3E2723;
+  transition: 0.8s;
+  transform: scale 1.3;
 }
 
 /*Vesion Mobile*/
@@ -356,122 +585,91 @@ p {
     width: 100%;
     height: auto;
   }
-  .banner .logo {
-    width: 60px;
-    height: 60px;
+  .container-fluid {
+    margin: 0 15px;
   }
-  .banner .introduction {
+  .container {
+    flex-direction: column;
+  }
+  .container .introduction {
     width: 100%;
-    margin-left: 0px;
-    border-radius: 10px;
+  }
+  .container .networks__list {
+    flex-direction: row;
+    padding-left: 0;
   }
   /*Footer Mobile*/
-  .footer {
-    display: block;
-    justify-content: flex-end;
-    padding: 15px 0;
-    font-size: large;
+  .footer__banner {
+    flex-direction: column;
+    padding-bottom: 20px;
   }
-  .footer .logo {
-    margin: auto;
-    width: 60px;
-    height: 60px;
-  }
-  .footer .footer__location iframe {
-    padding: 1em;
+  .footer__banner iframe {
     width: 100%;
-    height: auto;
+  }
+  .footer__networks-list {
+    flex-direction: row;
+    padding-left: 0;
   }
   /*Main-index*/
-  .main__title, .main__text {
-    font-size: 20px;
-    width: 100%;
+  .main-index .experience-card {
+    flex-direction: column;
   }
-  .main__text {
-    padding: 25px;
-    font-weight: 700;
+  .main-index .experience-card__title {
+    text-align: center;
   }
-  .main .experience-card {
-    padding: 10px 50px;
-    display: block;
-  }
-  .main .experience-card__img {
-    width: 100%;
-  }
-  .main .experience-card__flecha {
-    display: none;
-  }
-  .main .experience-card__flecha--reverse {
-    display: none;
-  }
-  .main .experience-card__text {
-    width: 100%;
-    margin: auto;
-    font-size: 15px;
-    padding: 20px 0;
+  .main-index .experience-card__img {
+    width: 200px;
+    height: 200px;
   }
   /*Main adoptar*/
-  .lema {
-    font-size: 20px;
-    border-radius: 0px;
-  }
-  .main__adoption {
-    width: 100%;
+  .pets-cards {
     flex-direction: column-reverse;
-    display: flex;
-    justify-content: center;
-    padding: 0;
   }
   .pets-cards__adoption {
     display: flex;
     justify-content: center;
-    padding-left: 0px;
-    padding: 30px;
   }
-  .pet-card,
-.pet-card__img {
-    width: 100%;
+  .filter-form input {
+    width: 30px;
+    height: 20px;
   }
   .section-filter {
-    padding: 30px;
-  }
-  .filter-form {
     display: flex;
-    justify-content: space-between;
-  }
-  .filter {
-    width: 100%;
-    height: 100%;
-    font-size: 18px;
-    border-radius: 10px;
-    margin: 0;
-  }
-  .filter__data {
-    display: block;
-    padding: 15px;
+    justify-content: center;
   }
   /*Main-donar*/
-  .donate-form__data {
-    display: grid;
-    grid-template-columns: 1fr;
+  .main-donar__description img {
+    width: 100px;
+    height: 200px;
   }
-  .donate-form__data__item {
-    padding: 0px;
-    grid-column-start: 1;
-    grid-column-end: 1;
+  .main-donar__text {
+    font-size: 16px;
   }
-  /*Main-mascotas perdidas*/
-  .lost-pets-cards {
-    padding: 30px;
+  .donate-form {
+    width: 100%;
+  }
+  .donate-form__img {
+    width: 100%;
+  }
+  .form-donar__items select {
+    padding: 10px 20px;
+  }
+  .form-donar__button {
+    margin-top: 30px;
   }
   /*Main-contacto*/
-  .contact-form {
-    margin: auto;
-    background-color: transparent;
-    width: 350px;
-    padding: 0;
-    border-radius: none;
-    box-shadow: none;
+  .main-contacto__container {
+    padding: 20px 5px;
+    gap: 10px;
+  }
+  .main-contacto .contact-form {
+    width: 100%;
+  }
+  .main-contacto .contact-form__data {
+    grid-template-columns: 1fr;
+  }
+  .main-contacto .contact-form--item {
+    grid-column: 1/span 1;
   }
 }
 
