--- a/scss/base/_estiloGenerales.scss
+++ b/scss/base/_estiloGenerales.scss
@@ -3,7 +3,7 @@
     box-sizing: border-box;
     padding: 0;
     margin: 0;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Cairo', sans-serif;
   }
 
   img {
