--- a/scss/components/_adoptar.scss
+++ b/scss/components/_adoptar.scss
@@ -1,94 +1,120 @@
 /*Main-adoptar*/
-.main__adoption {
-  @include display-flex(flex, space-evenly);
-  padding-top: 30px;
-  color: black;
+.main-adoption{
+  width: 90%;
+  margin: auto;
+  color: $color-text;
+  &__text{
+    @include main-text;
+  }
 }
-.lema {
-  background-image: linear-gradient(to right, orange, blue, red);
-  font-size: nth($font-size , 5 );
-  border-radius: 5px;
-  padding: 0 10px;
-}
-.pets-cards__adoption {
-  width: 100%;
-  @include display-flex(flex, start);
-  gap: 20px;
-  flex-wrap: wrap;
-  padding-left: 30px;
-}
-.pet-card {
-  border-radius: 10px;
-  background-color: $color-secundary;
-  border: 1px solid rgb(56, 55, 55);
-  box-shadow: 10px 10px 20px $color-primary;
-  &,
-  &__img {
+  .pets-cards{
+    @include display-flex(flex, space-around);
+    gap: 10px;
+    padding-bottom: 30px;
+    &__adoption{
+      width: 100%;
+      @include display-flex(flex ,space-between);
+      gap: 20px;
+      align-items: center;
+      flex-wrap: wrap;
+
+    }
+  }
+  .pet-card{
     width: 300px;
-    border-top-left-radius: 10px;
-    border-top-right-radius: 10px;
-  }
-  &__img {
-    height: 225px;
-  }
-  .card-information {
-    padding: 15px;
-    &__name {
-      text-align: center;
-      padding-bottom: 20px;
-      font-weight: bold;
-      font-size: nth($font-size, 3);
-      color: $color-primary;
-    }
-    &__description {
-      text-align: center;
-      font-weight: 800;
-      font-size: 18px;
-    }
-  }
-  .pet-card__button {
-    @include display-flex(flex, center);
-    text-decoration: none;
-    color: $color-primary;
-    font-size: nth($colores, 2);
-    font-weight: bold;
-    background-color: $color-secundary;
-    padding: 15px 25px;
-    border: 2px solid black;
+    background-color: $color-primary;
     border-radius: 10px;
-    margin-top: 1em;
-    &:hover {
-      background-color: #dd9e40;
-      transition: 0.5s;
-      color: nth($colores, 3);
+    border: 2px solid $color-bordes;
+    padding: 30px;
+    &__img{
+      width: 100%;
+      height: 200px;
+      border-radius: 10px;
+    }
+    &__button{
+      text-decoration: none;
+      @include display-flex(flex , center);
+      margin-top: 30px;
+      background-color: $bg-btn;
+      padding: 20px 0;
+      border-radius: 10px;
+      color: white;
+      font-weight: 700;
+      &:hover{
+        @include btns-hover;
+      }
+      
+      
     }
   }
-}
-
-.filter {
-  //background-image: linear-gradient(to top, white, skyblue);
-  position: sticky;
-  top: 50px;
-  display: block;
-  border-radius: 20px;
-  width: 200px;
-  height: 400px;
-  font-size: nth($font-size, 3);
-  font-weight: bold;
-  box-shadow: 10px 20px 20px $color-primary;
-  margin-right: 60px;
-
-  &__title {
-    @include display-flex(flex, center);
-    color: nth($colores, 4);
-    font-weight: bolder;
+  .card-information{
+    height: 100%;
+    margin: 20px 0;
+    border-top: 2px solid $color-bordes;
+    &__name{
+      padding: 20px 0;
+      width: 100%;
+      text-align: center;
+      font-size: $font-titulos;
+      font-weight: 700;
+    }
+    &__description{
+      text-align: center;
+      font-weight: 600;
+      padding-bottom: 30px;
+      border-bottom: 2px solid $color-bordes;
+    }
   }
-  &__data {
-    @include display-flex(flex, center);
-    align-items: center;
-    padding-bottom: 8px;
+
+  .filter{
+    display: block;
+    position: sticky;
+    width: 250px;
+    height: auto;
+    top: 0px;
+    &__title{
+      text-align: center;
+      font-weight: 700;
+      font-size: $font-titulos;
+    }
+    &__data{
+      background-color: $color-primary;
+      border-radius: 10px;
+      font-size: $font-texto;
+      color: $color-text;
+    }
+    .filter-form{
+      padding: 30px 20px;
+      &__text{
+        padding-bottom: 10px;
+        margin-bottom: 10px;
+        border-bottom:2px solid $color-bordes;
+        font-weight: 700;
+
+      }
+      &__items{
+        padding-left:20px ;
+      }
+      &__item{
+        padding-bottom: 5px;
+      }
+
+    }
+    &__button{
+      background-color: $bg-btn;
+      width: 100%;
+      padding: 10px 0;
+      border-radius: 10px;
+      border: none;
+      margin-top: 10px;
+      color: white;
+      &:hover{
+        background-color: transparent;
+        box-shadow: 0 0 10px 0 #3E2723
+        inset, 0 0 10px 4px #3E2723;
+        color: $color-text;
+        transition: 0.8s;
+        transform: scale 1.3;
+      }
+    }
   }
-}
-.filter-form__text {
-  color: nth($colores, 2);
-}
