--- a/scss/components/_contacto.scss
+++ b/scss/components/_contacto.scss
@@ -1,17 +1,90 @@
 /* main - contacto*/
-.contact-form {
-    margin: auto;
-    background-color: transparent;
+.main-contacto {
+  width: 90%;
+  margin: auto;
+  color: $color-text;
+  &__title {
+    text-align: center;
+    font-size: $font-titulos;
+    font-weight: 700;
+    color: $color-text;
+    text-transform: uppercase;
+    padding: 30px 0;
+  }
+  &__text{
+    font-size: $font-texto;
+    font-weight: 500;
+  }
+  &__container {
+    @include display-flex(flex, space-evenly);
+    border: 2px solid $color-bordes;
+    padding: 20px 0;
+    border-radius: 10px;
+    align-items: center;
+    img {
+      width: 100px;
+      height: 100px;
+    }
+    &__text {
+      font-size: $font-texto;
+      color: $color-text;
+      font-weight: 600;
+    }
+  }
+  .contact-form {
+    background-color: $color-primary;
     width: 700px;
-    padding: 30px;
+    margin: 50px auto;
     border-radius: 10px;
-    box-shadow: 10px 10px 20px black;
+    padding-bottom: 20px;
+    color: $color-text;
+        font-size: $font-texto;
+    &__data {
+      display: grid;
+      gap: 20px;
+      padding: 30px;
+      grid-template-columns: 1fr 1fr;
+      grid-template-rows: auto;
+      input{  
+        width: 100%;
+        height: 40px;
+        background-color: $bg-nav-inputs;
+        border-radius: 10px;
+        border: none;
+        padding: 0 5px;
+      }
+      input[type="email"]:invalid{
+        border: 2px solid red;
+      }
+      textarea{
+        border: none;
+        resize: none;
+        width: 100%;
+        height: 150px;
+        background-color: $bg-nav-inputs;
+        border-radius: 10px;
+        padding-left: 5px
+      }
+      label{
+        padding-bottom: 15px;
+        padding-left: 5px;
+      }
+    }
+    &--item {
+      grid-column-start: 1;
+      grid-column-end: 3;
+    }
+    &__button{
+      @include btn-forms;
+      &:hover{
+        background-color: transparent;
+        box-shadow: 0 0 10px 0 #3E2723
+        inset, 0 0 10px 4px #3E2723;
+        color: $color-text;
+        transition: 0.8s;
+        transform: scale 1.3;
+      
+      }
+    }
   }
-  .input-contact {
-    background-image: linear-gradient(to right, blueviolet, rgb(56, 56, 56));
-    border-radius: 10px;
-    width: 100%;
-    margin-top: 15px;
-    padding: 10px;
-    font-size: nth($font-size , 3 );
-  }
+}
