--- a/scss/components/_donar.scss
+++ b/scss/components/_donar.scss
@@ -1,42 +1,87 @@
 /*main-donar*/
-.donate-form__data {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  grid-template-rows: auto;
-  gap: 20px;
-  font-size: nth($font-size, 4);
-  font-weight: bold;
-  padding: 20px;
-  &__item {
-    padding: 0 150px;
-    grid-column-start: 1;
-    grid-column-end: 3;
+.main-donar {
+  width: 90%;
+  margin: auto;
+  color: $color-text;
+  padding-bottom: 20px;
+  &__title {
+    @include main-text;
+  }
+  &__description {
+    border: 2px solid $color-bordes;
+    @include display-flex(flex, center);
+    gap: 20px;
+    align-items: center;
+    padding: 20px 30px;
+    border-radius: 10px;
+    margin-bottom: 70px;
+    img {
+      width: 100px;
+      height: 100px;
+      border-radius: 10px;
+    }
+  }
+
+  &__text {
+    font-size: $font-texto;
+    font-weight: 500;
+    line-height: 1.5;
+  }
+}
+.donate-form {
+  background-color: $color-primary;
+  border-radius: 10px;
+  width: 700px;
+  margin: auto;
+  padding: 20px 30px;
+
+  &__card {
+    margin: auto;
+    padding: 30px 0;
+  }
+  &__img {
+    margin: auto;
+    width: 300px;
+    height: 150px;
   }
 }
 
-.input-donation {
-  background-color: transparent;
-  width: 100%;
-  font-size: 20px;
-  padding: 15px;
-  border-radius: 10px;
-  font-weight: bold;
-}
+.form-donar {
+  border-top: 2px solid $color-bordes;
+  color: $color-text;
+  font-size: $font-texto;
+  padding: 30px 0;
+  &__datas {
+    input {
+      background-color: $bg-nav-inputs;
+      width: 100%;
+      height: 40px;
+      margin: 20px 0;
+      border-radius: 10px;
+      border: none;
+      padding: 0 5px;
+    }
+  }
+  &__items {
+    @include display-flex(flex, space-between);
+    select {
+      background-color: $bg-nav-inputs;
+      padding: 10px 40px;
+      margin-top: 20px;
+      margin-right: 10px;
+      border-radius: 10px;
+      border: none;
+    }
+  }
 
-.button {
-  @include display-flex(flex, center);
-  padding-top: 20px;
-  &__text {
-    font-size: nth($font-size, 2);
-    font-weight: bold;
-    padding: 5px 10px;
-    background-color: transparent;
-    color: nth($colores, 1);
-    border-radius: 5px;
+  &__button {
+    @include btn-forms;
     &:hover {
-      background-color: $bg-color__btn;
-      color: skyblue;
-      transition: 0.5s;
+      background-color: transparent;
+      box-shadow: 0 0 10px 0 #3e2723 inset, 0 0 10px 4px #3e2723;
+      color: $color-text;
+      transition: 0.8s;
+      transform: scale 1.3;
     }
   }
 }
