--- a/scss/components/_estilosMobile.scss
+++ b/scss/components/_estilosMobile.scss
@@ -5,129 +5,113 @@
     background-image: url(../img/fondo-mobile.jpg);
     width: 100%;
     height: auto;
-    .logo {
-      width: 60px;
-      height: 60px;
-    }
+  }
+  .container-fluid {
+    margin: 0 15px;
+  }
+  .container {
+    flex-direction: column;
     .introduction {
       width: 100%;
-      margin-left: 0px;
-      border-radius: 10px;
+    }
+    .networks {
+      &__list {
+        flex-direction: row;
+        padding-left: 0;
+      }
     }
   }
 
   /*Footer Mobile*/
   .footer {
-    @include display-flex(block, flex-end);
-    padding: 15px 0;
-    font-size: large;
-    .logo {
-      margin: auto;
-      width: 60px;
-      height: 60px;
+    &__banner {
+      flex-direction: column;
+      padding-bottom: 20px;
+      iframe {
+        width: 100%;
+      }
     }
-    .footer__location iframe {
-      padding: 1em;
-      width: 100%;
-      height: auto;
+    &__networks {
+      &-list {
+        flex-direction: row;
+        padding-left: 0;
+      }
     }
   }
 
   /*Main-index*/
-  .main {
-    &__title,
-    &__text {
-      font-size: nth($font-size, 2);
+  .main-index {
+    .experience-card {
+      flex-direction: column;
+      &__title {
+        text-align: center;
+      }
+      &__img {
+        width: 200px;
+        height: 200px;
+      }
+    }
+  }
+  /*Main adoptar*/
+  .pets-cards{
+    flex-direction: column-reverse;
+    &__adoption{
+      @include display-flex(flex,center);
+     }
+  }
+  .filter-form{
+    input{
+      width: 30px;
+      height: 20px
+    }
+  }
+  .section-filter{
+    @include display-flex(flex, center);
+  }
+  /*Main-donar*/
+  .main-donar{
+    &__description{
+      img{
+        width: 100px;
+        height: 200px;
+      }
+    }
+    &__text{
+      font-size: 16px;
+    }
+  }
+  .donate-form{
+    width: 100%;
+    &__img{
       width: 100%;
     }
-    &__text {
-      padding: 25px;
-      font-weight: 700;
-    }
-
-    .experience-card {
-      padding: 10px 50px;
-      display: block;
-      &__img {
-        width: 100%;
-      }
-      &__flecha{
-        display: none;
-        &--reverse{
-          display: none;
-        }
-      }
-
-      &__text {
-        width: 100%;
-        margin: auto;
-        font-size: 15px;
-        padding: 20px 0;
+  }
+  .form-donar{
+    &__items{
+      select{
+        padding: 10px 20px;
       }
     }
-  }
-
-  /*Main adoptar*/
-
-  .lema {
-    font-size: nth($font-size, 2);
-    border-radius: 0px;
-  }
-  .main__adoption {
-    width: 100%;
-    flex-direction: column-reverse;
-    @include display-flex(flex, center);
-    padding: 0;
-  }
-  .pets-cards__adoption {
-    @include display-flex(flex, center);
-    padding-left: 0px;
-    padding: 30px;
-  }
-  .pet-card,
-  .pet-card__img {
-    width: 100%;
-  }
-  .section-filter {
-    padding: 30px;
-  }
-  .filter-form {
-    @include display-flex(flex, space-between);
-  }
-
-  .filter {
-    width: 100%;
-    height: 100%;
-    font-size: 18px;
-    border-radius: 10px;
-    margin: 0;
-    &__data {
-      display: block;
-      padding: 15px;
+    &__button{
+      margin-top: 30px;
     }
-  }
-
-  /*Main-donar*/
-  .donate-form__data {
-    display: grid;
-    grid-template-columns: 1fr;
-    &__item {
-      padding: 0px;
-      grid-column-start: 1;
-      grid-column-end: 1;
-    }
-  }
-  /*Main-mascotas perdidas*/
-  .lost-pets-cards {
-    padding: 30px;
   }
   /*Main-contacto*/
-  .contact-form {
-    margin: auto;
-    background-color: transparent;
-    width: 350px;
-    padding: 0;
-    border-radius: none;
-    box-shadow: none;
+  .main-contacto{
+    &__container{
+      padding: 20px 5px;
+      gap: 10px;
+    }
+    .contact-form{
+      width: 100%;
+      &__data{
+        grid-template-columns: 1fr;
+      }
+
+      &--item{
+        grid-column: 1 / span 1;
+      }
+    }
   }
+  
 }
