Fin del proyecto

--- a/scss/base/_variables.scss
+++ b/scss/base/_variables.scss
@@ -1,3 +1,4 @@
+//background
 $bg-nav-inputs: #CEAB93;
 $bg: #FFFBE9;
 $bg-btn: #AD8B73;
@@ -8,9 +9,9 @@ $color-text: #3E2723;
 //color de bordes
 $color-bordes: #AD8B73;
 //fon size
-$font-texto: 18px;
-$font-titulos: 25px;
-$font-subtitulos: 20px;
+$font-texto: 16px;
+$font-titulos: 20px;
+$font-subtitulos: 18px;
 
 
 
