--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,7 @@ p {
 
 /*Header*/
 .banner {
-  background-image: url(../img/fondo3.png);
+  background-image: url(../img/fondo.png);
   height: 600px;
 }
 
@@ -64,7 +64,7 @@ p {
   margin: 0 0.2em;
 }
 .nav-link:hover {
-  background-color: #AD8B78;
+  background-color: #ad8b78;
   transition: 0.8s;
 }
 
@@ -79,7 +79,7 @@ p {
   margin-top: 60px;
   padding: 10px 10px;
   border-radius: 10px;
-  font-size: 18px;
+  font-size: 16px;
   font-weight: bold;
   color: #3E2723;
 }
@@ -87,7 +87,7 @@ p {
   color: #3E2723;
   text-align: center;
   font-weight: 800;
-  font-size: 25px;
+  font-size: 20px;
 }
 .container .networks__list {
   display: flex;
@@ -109,7 +109,7 @@ p {
 .footer__title {
   text-align: center;
   color: #3E2723;
-  font-size: 25px;
+  font-size: 20px;
   padding-bottom: 30px;
   font-weight: 700;
 }
@@ -159,19 +159,30 @@ p {
 .main-index__carousel {
   background-color: #E3CAA5;
   margin-top: 20px;
-  padding: 20px 20px;
+  padding: 30px 80px;
   border-radius: 10px;
   border: 2px solid #AD8B73;
 }
 .main-index .carousel-title {
   text-align: center;
   padding: 30px 0;
-  font-size: 20px;
+  font-size: 18px;
   font-weight: 700;
   text-transform: uppercase;
 }
+.main-index .carousel slide {
+  width: 100%;
+  margin: auto;
+}
+.main-index .carousel-inner {
+  height: 500px;
+  border-radius: 10px;
+}
+.main-index .carousel-item {
+  height: 500px;
+}
 .main-index .carousel-indicators button {
-  background-color: #3E2723;
+  background-color: #3e2723;
 }
 .main-index .carousel-control-prev-icon {
   background-image: url(../img/prev.svg);
@@ -185,7 +196,7 @@ p {
 }
 .main-index__title, .main-index__text {
   text-align: center;
-  font-size: 20px;
+  font-size: 18px;
   font-weight: 700;
   padding: 40px 0;
   margin-top: 20px;
@@ -217,13 +228,13 @@ p {
   border-radius: 50%;
 }
 .main-index .experiences .experience-card__title {
-  font-size: 25px;
+  font-size: 20px;
   font-weight: 700;
   padding-bottom: 20px;
 }
 .main-index .experiences .experience-card__text {
   width: 300px;
-  font-size: 18px;
+  font-size: 16px;
   font-weight: 400;
   color: #3E2723;
 }
@@ -298,7 +309,7 @@ p {
   padding: 20px 0;
   width: 100%;
   text-align: center;
-  font-size: 25px;
+  font-size: 20px;
   font-weight: 700;
 }
 .card-information__description {
@@ -318,12 +329,12 @@ p {
 .filter__title {
   text-align: center;
   font-weight: 700;
-  font-size: 25px;
+  font-size: 20px;
 }
 .filter__data {
   background-color: #E3CAA5;
   border-radius: 10px;
-  font-size: 18px;
+  font-size: 16px;
   color: #3E2723;
 }
 .filter .filter-form {
@@ -352,7 +363,7 @@ p {
 }
 .filter__button:hover {
   background-color: transparent;
-  box-shadow: 0 0 10px 0 #3E2723 inset, 0 0 10px 4px #3E2723;
+  box-shadow: 0 0 10px 0 #3e2723 inset, 0 0 10px 4px #3e2723;
   color: #3E2723;
   transition: 0.8s;
   transform: scale 1.3;
@@ -389,7 +400,7 @@ p {
   border-radius: 10px;
 }
 .main-donar__text {
-  font-size: 18px;
+  font-size: 16px;
   font-weight: 500;
   line-height: 1.5;
 }
@@ -414,7 +425,7 @@ p {
 .form-donar {
   border-top: 2px solid #AD8B73;
   color: #3E2723;
-  font-size: 18px;
+  font-size: 16px;
   padding: 30px 0;
 }
 .form-donar__datas input {
@@ -446,7 +457,7 @@ p {
   border-radius: 10px;
   border: none;
   color: #3E2723;
-  font-size: 18px;
+  font-size: 16px;
   font-weight: 700;
   color: white;
 }
@@ -486,14 +497,14 @@ p {
 }
 .main-contacto__title {
   text-align: center;
-  font-size: 25px;
+  font-size: 20px;
   font-weight: 700;
   color: #3E2723;
   text-transform: uppercase;
   padding: 30px 0;
 }
 .main-contacto__text {
-  font-size: 18px;
+  font-size: 16px;
   font-weight: 500;
 }
 .main-contacto__container {
@@ -509,7 +520,7 @@ p {
   height: 100px;
 }
 .main-contacto__container__text {
-  font-size: 18px;
+  font-size: 16px;
   color: #3E2723;
   font-weight: 600;
 }
@@ -520,7 +531,7 @@ p {
   border-radius: 10px;
   padding-bottom: 20px;
   color: #3E2723;
-  font-size: 18px;
+  font-size: 16px;
 }
 .main-contacto .contact-form__data {
   display: grid;
@@ -565,13 +576,13 @@ p {
   border-radius: 10px;
   border: none;
   color: #3E2723;
-  font-size: 18px;
+  font-size: 16px;
   font-weight: 700;
   color: white;
 }
 .main-contacto .contact-form__button:hover {
   background-color: transparent;
-  box-shadow: 0 0 10px 0 #3E2723 inset, 0 0 10px 4px #3E2723;
+  box-shadow: 0 0 10px 0 #3e2723 inset, 0 0 10px 4px #3e2723;
   color: #3E2723;
   transition: 0.8s;
   transform: scale 1.3;
@@ -581,9 +592,10 @@ p {
 /*Header*/
 @media only screen and (max-width: 576px) {
   .banner {
-    background-image: url(../img/fondo-mobile.jpg);
+    background-image: url(../img/fondoMobile.jpg);
     width: 100%;
     height: auto;
+    background-size: cover;
   }
   .container-fluid {
     margin: 0 15px;
@@ -606,6 +618,9 @@ p {
   .footer__banner iframe {
     width: 100%;
   }
+  .footer__networks {
+    padding-right: 0;
+  }
   .footer__networks-list {
     flex-direction: row;
     padding-left: 0;
@@ -620,6 +635,15 @@ p {
   .main-index .experience-card__img {
     width: 200px;
     height: 200px;
+  }
+  .main-index__carousel {
+    padding: 20px 30px;
+  }
+  .main-index .carousel-inner {
+    height: 350px;
+  }
+  .main-index .carousel-item {
+    height: 350px;
   }
   /*Main adoptar*/
   .pets-cards {
@@ -656,6 +680,11 @@ p {
   }
   .form-donar__button {
     margin-top: 30px;
+  }
+  /*main-mascotasPerdidas*/
+  .main-mascotasPerdidas__text {
+    width: 300px;
+    margin: auto;
   }
   /*Main-contacto*/
   .main-contacto__container {
