--- a/scss/base/_estiloGenerales.scss
+++ b/scss/base/_estiloGenerales.scss
@@ -1,16 +1,16 @@
 /*Reseteo general*/
 * {
-    box-sizing: border-box;
-    padding: 0;
-    margin: 0;
-    font-family: 'Cairo', sans-serif;
-  }
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+  font-family: "Cairo", sans-serif;
+}
 
-  img {
-    width: 100%;
-    height: 100%;
-    display: block;
-  }
-  p{
-    margin: 0;
-  }
+img {
+  width: 100%;
+  height: 100%;
+  display: block;
+}
+p {
+  margin: 0;
+}
