--- a/scss/base/_mixin.scss
+++ b/scss/base/_mixin.scss
@@ -5,7 +5,7 @@
 @mixin main-text {
   text-align: center;
   padding: 40px 0;
-  font-size: $font-subtitulos;
+  font-size: $font-titulos;
   font-weight: 700;
   text-transform: uppercase;
   color: $color-text;
