--- a/scss/components/_adoptar.scss
+++ b/scss/components/_adoptar.scss
@@ -1,120 +1,114 @@
 /*Main-adoptar*/
-.main-adoption{
+.main-adoption {
   width: 90%;
   margin: auto;
   color: $color-text;
-  &__text{
+  &__text {
     @include main-text;
   }
 }
-  .pets-cards{
-    @include display-flex(flex, space-around);
-    gap: 10px;
-    padding-bottom: 30px;
-    &__adoption{
-      width: 100%;
-      @include display-flex(flex ,space-between);
-      gap: 20px;
-      align-items: center;
-      flex-wrap: wrap;
-
+.pets-cards {
+  @include display-flex(flex, space-around);
+  gap: 10px;
+  padding-bottom: 30px;
+  &__adoption {
+    width: 100%;
+    @include display-flex(flex, space-between);
+    gap: 20px;
+    align-items: center;
+    flex-wrap: wrap;
+  }
+}
+.pet-card {
+  width: 300px;
+  background-color: $color-primary;
+  border-radius: 10px;
+  border: 2px solid $color-bordes;
+  padding: 30px;
+  &__img {
+    width: 100%;
+    height: 200px;
+    border-radius: 10px;
+  }
+  &__button {
+    text-decoration: none;
+    @include display-flex(flex, center);
+    margin-top: 30px;
+    background-color: $bg-btn;
+    padding: 20px 0;
+    border-radius: 10px;
+    color: white;
+    font-weight: 700;
+    &:hover {
+      @include btns-hover;
     }
   }
-  .pet-card{
-    width: 300px;
+}
+.card-information {
+  height: 100%;
+  margin: 20px 0;
+  border-top: 2px solid $color-bordes;
+  &__name {
+    padding: 20px 0;
+    width: 100%;
+    text-align: center;
+    font-size: $font-titulos;
+    font-weight: 700;
+  }
+  &__description {
+    text-align: center;
+    font-weight: 600;
+    padding-bottom: 30px;
+    border-bottom: 2px solid $color-bordes;
+  }
+}
+
+.filter {
+  display: block;
+  position: sticky;
+  width: 250px;
+  height: auto;
+  top: 0px;
+  &__title {
+    text-align: center;
+    font-weight: 700;
+    font-size: $font-titulos;
+  }
+  &__data {
     background-color: $color-primary;
     border-radius: 10px;
-    border: 2px solid $color-bordes;
-    padding: 30px;
-    &__img{
-      width: 100%;
-      height: 200px;
-      border-radius: 10px;
-    }
-    &__button{
-      text-decoration: none;
-      @include display-flex(flex , center);
-      margin-top: 30px;
-      background-color: $bg-btn;
-      padding: 20px 0;
-      border-radius: 10px;
-      color: white;
-      font-weight: 700;
-      &:hover{
-        @include btns-hover;
-      }
-      
-      
-    }
+    font-size: $font-texto;
+    color: $color-text;
   }
-  .card-information{
-    height: 100%;
-    margin: 20px 0;
-    border-top: 2px solid $color-bordes;
-    &__name{
-      padding: 20px 0;
-      width: 100%;
-      text-align: center;
-      font-size: $font-titulos;
-      font-weight: 700;
-    }
-    &__description{
-      text-align: center;
-      font-weight: 600;
-      padding-bottom: 30px;
+  .filter-form {
+    padding: 30px 20px;
+    &__text {
+      padding-bottom: 10px;
+      margin-bottom: 10px;
       border-bottom: 2px solid $color-bordes;
-    }
-  }
-
-  .filter{
-    display: block;
-    position: sticky;
-    width: 250px;
-    height: auto;
-    top: 0px;
-    &__title{
-      text-align: center;
       font-weight: 700;
-      font-size: $font-titulos;
     }
-    &__data{
-      background-color: $color-primary;
-      border-radius: 10px;
-      font-size: $font-texto;
-      color: $color-text;
+    &__items {
+      padding-left: 20px;
     }
-    .filter-form{
-      padding: 30px 20px;
-      &__text{
-        padding-bottom: 10px;
-        margin-bottom: 10px;
-        border-bottom:2px solid $color-bordes;
-        font-weight: 700;
-
-      }
-      &__items{
-        padding-left:20px ;
-      }
-      &__item{
-        padding-bottom: 5px;
-      }
-
-    }
-    &__button{
-      background-color: $bg-btn;
-      width: 100%;
-      padding: 10px 0;
-      border-radius: 10px;
-      border: none;
-      margin-top: 10px;
-      color: white;
-      &:hover{
-        background-color: transparent;
-        box-shadow: 0 0 10px 0 #3E2723
-        inset, 0 0 10px 4px #3E2723;
-        color: $color-text;
-        transition: 0.8s;
-        transform: scale 1.3;
-      }
+    &__item {
+      padding-bottom: 5px;
     }
   }
+  &__button {
+    background-color: $bg-btn;
+    width: 100%;
+    padding: 10px 0;
+    border-radius: 10px;
+    border: none;
+    margin-top: 10px;
+    color: white;
+    &:hover {
+      background-color: transparent;
+      box-shadow: 0 0 10px 0 #3e2723 inset, 0 0 10px 4px #3e2723;
+      color: $color-text;
+      transition: 0.8s;
+      transform: scale 1.3;
+    }
+  }
+}
