--- a/scss/components/_contacto.scss
+++ b/scss/components/_contacto.scss
@@ -11,7 +11,7 @@
     text-transform: uppercase;
     padding: 30px 0;
   }
-  &__text{
+  &__text {
     font-size: $font-texto;
     font-weight: 500;
   }
@@ -38,14 +38,14 @@
     border-radius: 10px;
     padding-bottom: 20px;
     color: $color-text;
-        font-size: $font-texto;
+    font-size: $font-texto;
     &__data {
       display: grid;
       gap: 20px;
       padding: 30px;
       grid-template-columns: 1fr 1fr;
       grid-template-rows: auto;
-      input{  
+      input {
         width: 100%;
         height: 40px;
         background-color: $bg-nav-inputs;
@@ -53,19 +53,19 @@
         border: none;
         padding: 0 5px;
       }
-      input[type="email"]:invalid{
+      input[type="email"]:invalid {
         border: 2px solid red;
       }
-      textarea{
+      textarea {
         border: none;
         resize: none;
         width: 100%;
         height: 150px;
         background-color: $bg-nav-inputs;
         border-radius: 10px;
-        padding-left: 5px
+        padding-left: 5px;
       }
-      label{
+      label {
         padding-bottom: 15px;
         padding-left: 5px;
       }
@@ -74,16 +74,14 @@
       grid-column-start: 1;
       grid-column-end: 3;
     }
-    &__button{
+    &__button {
       @include btn-forms;
-      &:hover{
+      &:hover {
         background-color: transparent;
-        box-shadow: 0 0 10px 0 #3E2723
-        inset, 0 0 10px 4px #3E2723;
+        box-shadow: 0 0 10px 0 #3e2723 inset, 0 0 10px 4px #3e2723;
         color: $color-text;
         transition: 0.8s;
         transform: scale 1.3;
-      
       }
     }
   }
