--- a/scss/components/_inicio.scss
+++ b/scss/components/_inicio.scss
@@ -9,31 +9,44 @@
   border-bottom: 2px solid $color-bordes;
   width: 90%;
   margin: 40px auto;
-  &__carousel{
+  &__carousel {
     background-color: $color-primary;
     margin-top: 20px;
-    padding: 20px 20px;
+    padding: 30px 80px;
     border-radius: 10px;
     border: 2px solid $color-bordes;
   }
-  .carousel-title{
+  .carousel-title {
     text-align: center;
     padding: 30px 0;
     font-size: $font-subtitulos;
     font-weight: 700;
     text-transform: uppercase;
   }
-  .carousel-indicators{
-    button{
-      background-color: #3E2723;
+  .carousel slide {
+    width: 100%;
+    margin: auto;
+  }
+  .carousel {
+    &-inner {
+      height: 500px;
+      border-radius: 10px;
+    }
+    &-item {
+      height: 500px;
+    }
+    &-indicators {
+      button {
+        background-color: #3e2723;
+      }
     }
   }
-  .carousel-control-prev-icon{
+  .carousel-control-prev-icon {
     background-image: url(../img/prev.svg);
     width: 50px;
     height: 50px;
   }
-  .carousel-control-next-icon{
+  .carousel-control-next-icon {
     background-image: url(../img/next.svg);
     width: 50px;
     height: 50px;
@@ -45,7 +58,7 @@
     font-weight: 700;
     padding: 40px 0;
     margin-top: 20px;
-    text-transform: uppercase 
+    text-transform: uppercase;
   }
   .experiences {
     @include display-flex(flex, space-evenly);
@@ -81,5 +94,4 @@
       }
     }
   }
- 
 }
